--- a/src/views/partials/newurl.hbs
+++ b/src/views/partials/newurl.hbs
@@ -1,5 +1,5 @@
 <div class="data">
     <div>
-        <p>https://localhost:3000/{{newurl}}<i class="fas fa-copy" data-clipboard-target="#input-url" id="copy-btn"></i><span class="tooltip">Copied</span></p>
+        <p>{{newurl}}<i class="fas fa-copy" data-clipboard-target="#input-url" id="copy-btn"></i><span class="tooltip">Copied</span></p>
     </div>
 </div>
