--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedri.To || Modern URL Shortener</title>
+    <link rel="icon" type="image/png"  href="/assets/favicon.png">
     {{!-- FontAwesome CSS --}}
     <link rel="stylesheet" href="/css/css/all.min.css">
     {{!-- Custom CSS --}}
     <link rel="stylesheet" href="/css/errors.css">
     <link rel="stylesheet" href="/css/styles.css">
-    {{!-- <link rel="stylesheet" href="/css/bootstrap.min.css"> --}}
 </head>
 <body>
     {{>navigation}}
