--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -3,7 +3,7 @@
             <h1 class="title">Pedri.To</h1>
             <form action="/myurls" method="POST">
                 <div class="search-box">
-                    <input class="search-txt" type="text" placeholder="TYPE TO SHORT" id="input-url" name="oldurl">
+                    <input class="search-txt" type="text" placeholder="Write to Shorten" id="input-url" name="oldurl">
                     <button class="search-btn" id="search-btn" type="submit">
                         <i class="fas fa-paper-plane"></i>
                     </button>
