--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,7 +1,7 @@
 <section class="section" id="section">
         <div class="main">
             <h1 class="title">Pedri.To</h1>
-            <form action="/myurls" method="POST">
+            <form action="/create-url" method="POST">
                 <div class="search-box">
                     <input class="search-txt" type="text" placeholder="Write to Shorten" id="input-url" name="oldurl">
                     <button class="search-btn" id="search-btn" type="submit">
