--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -3,9 +3,8 @@
             <h3>Designed and Developed by Pedro Castellanos Alonso</h3>
         </div>
         <div class="sm">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="https://facebook.com/pedro.castellanos2003" target="_blank" rel="noreferrer"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://instagram.com/pedrocastellanos2003" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/pedrocastellanos" target="_blank"><i class="fab fa-github"></i></a>
         </div>
 </footer>
