--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -1,7 +1,7 @@
 <div class="main-section">
     <div class="text">
-        <h1>Enlaces más cortos</h1>
-        <p>Acorte sus vínculos con nombres únicos para generar el reconocimiento de su marca de forma gratuita. Inicie sesión para obtener información detallada sobre el rendimiento de sus vínculos.</p>
+        <h1>Shorter links</h1>
+        <p>Shorten your links with unique names to generate brand recognition for free. Please log in to get detailed information on the performance of your links.</p>
         <a href="/">Start</a>
     </div>
     <div class="image">
@@ -11,26 +11,26 @@
 <div class="information">
     <div class="information-card">
         <div class="information-card-header">
-            <h2>Reconocimiento de marca</h2>
+            <h2>Brand recognition</h2>
         </div>
         <div class="information-card-body">
-            <p>Aumente el reconocimiento de su marca con cada clic. Los enlaces genéricos no significan nada. Los enlaces de marca ayudan a infundir confianza en su contenido.</p>
+            <p>Increase your brand recognition with every click. Generic links don't mean anything. Branded links help instill trust in your content.</p>
         </div>
     </div>
     <div class="information-card">
         <div class="information-card-header">
-            <h2>Totalmente personalizable</h2>
+            <h2>Fully customizable</h2>
         </div>
         <div class="information-card-body">
-            <p>Mejore el conocimiento de la marca y la visibilidad de contenido a través de enlaces personalizables, lo que aumenta la participación de la audiencia.</p>
+            <p>Improve brand awareness and content visibility through customizable links, increasing audience engagement.</p>
         </div>
     </div>
     <div class="information-card">
         <div class="information-card-header">
-            <h2>Registros detallados</h2>
+            <h2>Detailed records</h2>
         </div>
         <div class="information-card-body">
-            <p>Obtenga información sobre quién hace click en sus enlaces. Saber cuándo y dónde las personas interactúan con su contenido ayuda a tomar mejores decisiones.</p>
+            <p>Get information on who clicks on your links. Knowing when and where people interact with your content helps you make better decisions.</p>
         </div>
     </div>
 </div>
